[gd_scene load_steps=7 format=3 uid="uid://b2ab3s83jmjbx"]

[ext_resource type="Script" uid="uid://bc7is7g50fph6" path="res://minigames/window.gd" id="1_gu3qm"]
[ext_resource type="Texture2D" uid="uid://c5ojc0wjetdlv" path="res://Assets/Sprites/window.png" id="1_xus63"]
[ext_resource type="Texture2D" uid="uid://bfvbfre6gevvk" path="res://Assets/Sprites/broken_glass.png" id="2_gu3qm"]
[ext_resource type="AudioStream" uid="uid://dkapsn0knbvfb" path="res://Assets/Audio/glass-break-1.mp3" id="4_khm8d"]
[ext_resource type="AudioStream" uid="uid://d1yt4ays86k5h" path="res://Assets/Audio/glass-break-2.mp3" id="5_wx56s"]
[ext_resource type="AudioStream" uid="uid://o5kr3k24w51u" path="res://Assets/Audio/glass-break-3.mp3" id="6_yjy8j"]

[node name="Button" type="Button"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -53.0
offset_right = 65.0
offset_bottom = 53.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gu3qm")

[node name="Window" type="Sprite2D" parent="."]
position = Vector2(65, 53)
scale = Vector2(0.10046295, 0.10046295)
texture = ExtResource("1_xus63")

[node name="Cracked Glass" type="Sprite2D" parent="."]
position = Vector2(65, 53)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_gu3qm")

[node name="Glass1SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_khm8d")

[node name="Glass2SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_wx56s")

[node name="Glass3SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_yjy8j")

[connection signal="pressed" from="." to="." method="_on_pressed"]
